--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                       </div>
 
                       <div class="social-links">
-                        <a href="https://github.com/netuoso" target="_blank" rel="noopener"><i class="fa fa-github"></i></a>
+                        <a href="//github.com/netuoso" target="_blank" rel="noopener"><i class="fa fa-github"></i></a>
+                        <a href="//twitter.com/netuoso" target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a>
+                        <a href="//www.linkedin.com/in/chaneyandrew/" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a>
                         <a href="mailto:andrew@boonedevelopment.com"><i class="fa fa-envelope"></i></a>
                       </div>
                     </div>
@@ -137,17 +139,20 @@
                           <h3>About <span>Me</span></h3>
                         </div>
                         <p>
-                          I am a self taught software developer that started practicing professionally in 2010 where I started creating custom software for Techflavor. Since then, I have done information security and threat management, embedded device development (hardware and software), database driven website development (MVC frameworks), mobile application development (Android/iOS), and blockchain development.
+                          I am a full-stack developer that specializes in Ruby/Rails, NodeJs, C++ smart contract development, and AWS cloud management. I believe in remaining code agnostic and being able to adapt to whatever stack the project, or client, requires. By following the principals outlined in the Pragmatic Programmer, I am able to develop highly modular, orthagonal code that can stand the test of time and remain easy to deploy across multiple different evironments and architectures.
                         </p>
                         <p>
-                          When I found cryptocurrency in 2010 I quickly realized it was the path I wished to pursue with my software development career. Since then I have come to master several different blockchain technologies and have found creative ways to apply them to businesses of all sizes. I have supported companies that wanted to simply start accepting cryptocurrency through a point-of-sale system to companies that wanted to build their company on top of the blockchain.
+                          I have been programming professionally since 2010. Since then, I have done information security and threat management, embedded device development (hardware and software), database driven website development (MVC frameworks), mobile application development (Android/iOS), and blockchain development.
+                        </p>
+                        <p>
+                          Very soon into my career, I found cryptocurrency and quickly realized it was the path I wished to pursue. Since then I have come to master several different blockchain technologies and have found creative ways to apply them to businesses of all sizes. I have supported companies that wanted to simply start accepting cryptocurrency through a point-of-sale system to companies that wanted to build their company on top of the blockchain.
                         </p>
                         <p>
                           If you are looking to work with <strong>Boone Development</strong> on your own blockchain implementation, or any other form of custom development, do not hesitate to reach out today. I pride myself on delivering high quality products with a blazing fast speed and efficiency that can fully satisfy your companies particular needs before the competition.
                         </p>
                       </div>
                       <!-- <div class="download-resume">
-                        <a href="https://mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
+                        <a href="//mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
                       </div> -->
                     </div>
 
@@ -184,8 +189,21 @@
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">CEO & Founder</h4>
+                            <h4 class="item-title">Full-Stack Developer</h4>
                             <span class="item-period">2019 - Current</span>
+                            <span class="item-small">0rigin, LLC</span>
+                            <br/>
+                            <p class="item-description">
+                              0rigin is a blockchain based company that specializes in maintaining DeFi applications on EOSIO based networks. 0rigin created and launched the UX Network blockchain with a focus on B2B and predictable network resource management.<br/><br/>
+                              While working at 0rigin, I have helped build custom software to support the company's various blockchain related services and protocols. My tasks have included creating command line tools, Electron based applications, and EOSIO based smart contracts.
+                            </p>
+                          </div>
+                          <!-- / Experience 1 -->
+
+                          <!-- Experience 2 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">CEO & Founder</h4>
+                            <span class="item-period">2017 - Current</span>
                             <span class="item-small">Boone Development</span>
                             <br/>
                             <p class="item-description">
@@ -193,29 +211,7 @@
                               On top of software development services, <strong>Boone Development</strong> also provides high quality blockchain consulting for all types of businesses and clients.
                             </p>
                           </div>
-                          <!-- / Experience 1 -->
-
-                          <!-- Experience 2 -->
-                          <!-- <div class="timeline-item">
-                            <h4 class="item-title">Blockchain Developer</h4>
-                            <span class="item-period">2018 - 2019</span>
-                            <span class="item-small">PredictEV Inc.</span>
-                            <p class="item-description">Predictev is a patent-pending blockchain-powered social sports prediction platform. Predictev rewards fans for making live in-game predictions via chat as well as posting in-depth pre-game analysis.</p>
-                          </div> -->
                           <!-- / Experience 2 -->
-
-                          <!-- Experience 3 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Full-stack Developer / Devops</h4>
-                            <span class="item-period">2017 - Current</span>
-                            <span class="item-small">Freelance</span>
-                            <br/>
-                            <p class="item-description">
-                              As a full stack developer, I provide development services for frontend or backend related purposes. We provide custom development, help, and support for projects of all sizes and complexity.<br/><br/>
-                              Backend services include custom APIs that can serve data to websites, mobile applications, blockchains, smart contracts, web oracles, and much more. Frontend services include website development with static websites, custom themes/templates, and user experience consulting/development.<br/>
-                            </p>
-                          </div>
-                          <!-- / Experience 3 -->
                         </div>
                       </div>
                     </div>
@@ -226,7 +222,7 @@
                         </div>
 
                         <div class="timeline">
-                          <!-- Experience 4 -->
+                          <!-- Experience 3 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Senior Software Developer</h4>
                             <span class="item-period">2015 - 2017</span>
@@ -235,9 +231,9 @@
                               Autobrain directly monitors and communicates vital vehicle information through a wireless, easy to install, plug and play OBD-II device, website, and mobile app. With Autobrain, you can locate your car instantly with your phone, get an alert when your teenager is driving too fast, and get help quickly if you're in a crash; much like OnStar.
                             </p>
                           </div>
-                          <!-- / Experience 4 -->
+                          <!-- / Experience 3 -->
 
-                          <!-- Experience 5 -->
+                          <!-- Experience 4 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Network Support Analyst</h4>
                             <span class="item-period">2010 - 2015</span>
@@ -246,9 +242,9 @@
                               Techflavor is a Managed Service Provider that is responsible for managing the networks and technological infrastructure of many clients with various sized teams and operations. On top of providing high quality MSP IT services, Techflavor provides state of the art information and cyber security consulting.
                             </p>
                           </div>
-                          <!-- / Experience 5-->
+                          <!-- / Experience 4-->
 
-                          <!-- Experience 6 -->
+                          <!-- Experience 5 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Offshore Surveyor</h4>
                             <span class="item-period">2006 - 2015</span>
@@ -257,7 +253,7 @@
                               With offices in Baton Rouge, Louisiana and Houston, Texas, Tesla Offshore operates multiple survey vessels acquiring state of the art high resolution geophysical data of the seafloor and sub-seafloor.
                             </p>
                           </div>
-                          <!-- / Experience 6 -->
+                          <!-- / Experience 5 -->
 
                         </div>
                       </div>
@@ -322,42 +318,42 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>C++</h4>
+                          <h4>Ruby</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-9"></div>
                           </div>
 
-                          <h4>Python</h4>
+                          <h4>C++</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-10"></div>
                           </div>
 
-                          <h4>NodeJS</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-13"></div>
-                          </div>
-
-                          <h4>Ruby</h4>
+                          <h4>Python</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-11"></div>
                           </div>
 
-                          <h4>React</h4>
+                          <h4>NodeJS</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-12"></div>
                           </div>
 
-                          <h4>Amazon AWS</h4>
+                          <h4>Ruby on Rails</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-13"></div>
+                          </div>
+
+                          <h4>React</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-14"></div>
                           </div>
 
-                          <h4>Django</h4>
+                          <h4>Amazon AWS</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-15"></div>
                           </div>
 
-                          <h4>Rails 4/5</h4>
+                          <h4>Django</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-16"></div>
                           </div>
@@ -407,7 +403,7 @@
                             <img src="images/service/blockchain.png" alt="Blockchain Development" class="mCS_img_loaded">
                           </div>
                           <h4>Blockchain Development</h4>
-                          <p><strong>Boone Development</strong> specializes in blockchain development based on Bitcoin, EOS, Steem, Hive, and Ethereum blockchains. However, we will provide blockchain consulting and development for most all blockchains.</p>
+                          <p><strong>Boone Development</strong> specializes in blockchain development based on Bitcoin, EOS, Hive, and Ethereum blockchains. However, we will provide blockchain consulting and development for most all blockchains.</p>
                         </div>
                       </div>
                     </div>
@@ -461,24 +457,20 @@
                         <div class="block-title text-center">
                           <h3>Get in <span>Touch</span></h3>
                         </div>
-                        <!-- Google Map -->
-                        <!-- <div id="map" class="map"></div> -->
-                        <!-- End of Google Map -->
-
-                        <div class="contact-info-block">
-                          <div class="ci-icon">
-                            <i class="fa fa-envelope"></i>
-                          </div>
-                          <div class="ci-text">
-                            <h5><a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></h5>
-                          </div>
-                        </div>
                         <div class="contact-info-block">
                           <div class="ci-icon">
                             <i class="fa fa-check"></i>
                           </div>
                           <div class="ci-text">
                             <h5>Freelance Available</h5>
+                          </div>
+                        </div>
+                        <div class="contact-info-block">
+                          <div class="ci-icon">
+                            <i class="fa fa-envelope"></i>
+                          </div>
+                          <div class="ci-text">
+                            <h5><a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></h5>
                           </div>
                         </div>
                       </div>
@@ -497,7 +489,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">© Boone Development 2019 - 2021. All rights reserved.</div>
+      <div class="copyrights">© Boone Development 2017 - 2022. All rights reserved.</div>
     </footer>
 
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
