--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="page-content" style="text-align:center;">
 
                   <div class="row">
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-sm-12 col-md-6">
                       <div class="block">
                         <div class="block-title">
                           <h3><span>Experience<span></h3>
@@ -188,19 +188,6 @@
 
                         <div class="timeline">
                           <!-- Experience 1 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Full-Stack Developer</h4>
-                            <span class="item-period">2019 - Current</span>
-                            <span class="item-small">0rigin, LLC</span>
-                            <br/>
-                            <p class="item-description">
-                              0rigin is a blockchain based company that specializes in maintaining DeFi applications on EOSIO based networks. 0rigin created and launched the UX Network blockchain with a focus on B2B and predictable network resource management.<br/><br/>
-                              While working at 0rigin, I have helped build custom software to support the company's various blockchain related services and protocols. My tasks have included creating command line tools, Electron based applications, and EOSIO based smart contracts.
-                            </p>
-                          </div>
-                          <!-- / Experience 1 -->
-
-                          <!-- Experience 2 -->
                           <div class="timeline-item">
                             <h4 class="item-title">CEO & Founder</h4>
                             <span class="item-period">2017 - Current</span>
@@ -211,12 +198,25 @@
                               On top of software development services, <strong>Boone Development</strong> also provides high quality blockchain consulting for all types of businesses and clients.
                             </p>
                           </div>
+                          <!-- / Experience 1 -->
+
+                          <!-- Experience 2 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Full-Stack Developer</h4>
+                            <span class="item-period">2019 - 2022</span>
+                            <span class="item-small">0rigin, LLC</span>
+                            <br/>
+                            <p class="item-description">
+                              0rigin is a blockchain based company that specializes in maintaining DeFi applications on EOSIO based networks. 0rigin created and launched the UX Network blockchain with a focus on B2B and predictable network resource management.<br/><br/>
+                              While working at 0rigin, I have helped build custom software to support the company's various blockchain related services and protocols. My tasks have included creating command line tools, Electron based applications, and EOSIO based smart contracts.
+                            </p>
+                          </div>
                           <!-- / Experience 2 -->
                         </div>
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-sm-12 col-md-6">
                       <div class="block">
                         <div class="block-title spaced">
                         </div>
@@ -380,7 +380,6 @@
             </section>
             <!-- End of Resume Subpage -->
 
-
             <!-- Services Subpage -->
             <section class="pt-page" data-id="services">
               <div class="section-inner custom-page-content">
@@ -390,47 +389,87 @@
                 <div class="page-content">
                   <!-- My Services -->
                   <div class="row">
-                    <div class="col-sm-12 col-md-12">
+                    <div class="col-sm-12">
                       <div class="block-title">
                         <h3><span>Services</span></h3>
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-4">
-                      <div class="service-block"> 
-                        <div class="service-info">
-                          <div class="service-image">
-                            <img src="images/service/blockchain.png" alt="Blockchain Development" class="mCS_img_loaded">
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <div class="service-block"> 
+                          <div class="service-info">
+                            <!--<i class="service-icon fa fa-shopping-cart"></i>-->
+                            <div class="service-image">
+                              <img src="images/service/web_design_icon.png" alt="Website Development" class="mCS_img_loaded">
+                            </div>
+                            <h4>Website Development</h4>
+                            <p>
+                              If you need a website for marketing, ecommerce, displaying your portfolio, or pretty much anything else get in touch with <strong>Boone Development</strong> for very fast turn around, competetive rates, and high quality support.
+                            </p>
                           </div>
-                          <h4>Blockchain Development</h4>
-                          <p><strong>Boone Development</strong> specializes in blockchain development based on Bitcoin, EOS, Hive, and Ethereum blockchains. However, we will provide blockchain consulting and development for most all blockchains.</p>
+                        </div>
+                      </div>
+
+                      <div class="col-sm-4">
+                        <div class="service-block"> 
+                          <div class="service-info">
+                            <div class="service-image">
+                              <img src="images/service/code_icon.png" alt="Custom Development" class="mCS_img_loaded">
+                            </div>
+                            <h4>Custom Development</h4>
+                            <p>Need a custom app, database, API, smart contract, or entire blockchain created specifically for your business? <strong>Boone Development</strong> will come up with a customized solution that will satisfy your exact needs.</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-sm-4">
+                        <div class="service-block"> 
+                          <div class="service-info">
+                            <div class="service-image">
+                              <img src="images/service/advertising_icon.png" alt="Advertising Campaigns" class="mCS_img_loaded">
+                            </div>
+                            <h4>Advertising Campaigns</h4>
+                            <p><strong>Boone Development</strong> can help you create new advertising campaigns or manage existing ones on platforms such as Facebook (Meta), Google Adwords, Hive Blockchain, and more.</p>
+                          </div>
                         </div>
                       </div>
                     </div>
 
-                    <div class="col-sm-12 col-md-4">
-                      <div class="service-block"> 
-                        <div class="service-info">
-                          <!--<i class="service-icon fa fa-shopping-cart"></i>-->
-                          <div class="service-image">
-                            <img src="images/service/web_design_icon.png" alt="Web Development" class="mCS_img_loaded">
+                    <div class="row">
+                      <div class="col-sm-4">
+                        <div class="service-block"> 
+                          <div class="service-info">
+                            <div class="service-image">
+                              <img src="images/service/photography_icon.png" alt="Video Editing" class="mCS_img_loaded">
+                            </div>
+                            <h4>Video Editing</h4>
+                            <p>Using cutting edge drone technology combined with creative video editing techniques, <strong>Boone Development</strong> can create engaging and eye-catching promotional video content for your every need.</p>
                           </div>
-                          <h4>Website Development</h4>
-                          <p>
-                            If you need a website for marketing, ecommerce, displaying your portfolio, or pretty much anything else get in touch with <strong>Boone Development</strong> for very fast turn around, competetive rates, and high quality support.
-                          </p>
                         </div>
                       </div>
-                    </div>
 
-                    <div class="col-sm-12 col-md-4">
-                      <div class="service-block"> 
-                        <div class="service-info">
-                          <div class="service-image">
-                            <img src="images/service/code_icon.png" alt="Custom Development" class="mCS_img_loaded">
+                      <div class="col-sm-4">
+                        <div class="service-block"> 
+                          <div class="service-info">
+                            <div class="service-image">
+                              <img src="images/service/creativity_icon.png" alt="AWS Support / Management" class="mCS_img_loaded">
+                            </div>
+                            <h4>AWS Support / Management</h4>
+                            <p>If you need help with your AWS cloud computing infrastructure, <strong>Boone Development</strong> can provide anything from minor troubleshooting, to consulting, to entire infrastructure migrations.</p>
                           </div>
-                          <h4>Custom Development</h4>
-                          <p>Need a custom app, database, API, smart contract, or entire blockchain created specifically for your business? Send me an email with the details of the project and we can get together to come up with a customized solution that will satisfy your needs.</p>
+                        </div>
+                      </div>
+
+                      <div class="col-sm-4">
+                        <div class="service-block"> 
+                          <div class="service-info">
+                            <div class="service-image">
+                              <img src="images/service/blockchain_icon.png" alt="Software Troubleshooting" class="mCS_img_loaded">
+                            </div>
+                            <h4>Software Troubleshooting</h4>
+                            <p>No matter what the software is, if its not working the way you need it to then reach out to <strong>Boone Development</strong> for custom troubleshooting and problem solving. We will tell you exactly what the problem is and, if possible, provide a step by step solution.</p>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -453,24 +492,32 @@
 
                   <div class="row">
                     <div class="col-sm-12">
-                      <div class="col-centered">
+                      <div class="col-centered" style="width:100%;max-width:420px">
                         <div class="block-title text-center">
                           <h3>Get in <span>Touch</span></h3>
                         </div>
-                        <div class="contact-info-block">
-                          <div class="ci-icon">
-                            <i class="fa fa-check"></i>
+                        <div class="row">
+                          <div class="contact-info-block col-sm-12">
+                            <div class="form-group">
+                              <label for="name">Name</label>
+                              <input class="form-control" id="name" />
+                            </div>
+                            <div class="form-group">
+                              <label for="email">Email</label>
+                              <input class="form-control" id="email" />
+                            </div>
+                            <div class="form-group">
+                              <label for="message">Message</label>
+                              <textarea class="form-control" id="message" rows="3"></textarea>
+                            </div>
                           </div>
-                          <div class="ci-text">
-                            <h5>Freelance Available</h5>
-                          </div>
-                        </div>
-                        <div class="contact-info-block">
-                          <div class="ci-icon">
-                            <i class="fa fa-envelope"></i>
-                          </div>
-                          <div class="ci-text">
-                            <h5><a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></h5>
+                          <div class="contact-info-block col-sm-12">
+                            <div class="ci-icon">
+                              <i class="fa fa-envelope"></i>
+                            </div>
+                            <div class="ci-text text-center">
+                              <button style="width: 100%" onClick="send_email()">Send Message</button>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -503,5 +550,18 @@
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
     <script type="text/javascript" src="js/jquery.googlemap.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+
+    <script>
+      function send_email() {
+        var name = $('#name').val();
+        var email = $('#email').val();
+        var message = $('#message').val();
+        if(!name || !email || !message) {
+          alert("Please make sure to complete the entire form before submitting.");
+          return;
+        }
+        document.location = `mailto:website@boonedevelopment.com?subject=Website Contact From: ${name} (${email})&body=${message}`;
+      }
+    </script>
   </body>
 </html>
