--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/animate.css" type="text/css">
     <link rel="stylesheet" href="css/transition-animations.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css"> -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
     <meta property="og:title" content="Boone Development" />
@@ -26,7 +26,7 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
 
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
   </head>
 
   <body class="material-template">
@@ -74,7 +74,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Andrew Chaney</div>
+          <div class="mobile-site-title">Boone Development</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -106,16 +106,22 @@
                         <h1>Andrew Chaney</h1>
                         <div class="owl-carousel text-rotation">
                           <div class="item">
-                            <div class="sp-subtitle">Blockchain Developer</div>
-                          </div>
-                          <div class="item">
-                            <div class="sp-subtitle">Full-Stack Developer</div>
+                            <div class="sp-subtitle">Website Developer</div>
                           </div>
                           <div class="item">
                             <div class="sp-subtitle">Systems Administrator</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Entrepreneur</div>
+                            <div class="sp-subtitle">Full-Stack Developer</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Blockchain Developer</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">DevOps Engineer</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Technological Idealist</div>
                           </div>
                         </div>
                       </div>
@@ -133,7 +139,7 @@
                 <div class="page-content">
                   <div class="row">
 
-                    <div class="col-sm-12 col-md-8">
+                    <div class="col-sm-12">
                       <div class="about-me">
                         <div class="block-title">
                           <h3>About <span>Me</span></h3>
@@ -145,24 +151,15 @@
                           I have been programming professionally since 2010. Since then, I have done information security and threat management, embedded device development (hardware and software), database driven website development (MVC frameworks), mobile application development (Android/iOS), and blockchain development.
                         </p>
                         <p>
-                          Very soon into my career, I found cryptocurrency and quickly realized it was the path I wished to pursue. Since then I have come to master several different blockchain technologies and have found creative ways to apply them to businesses of all sizes. I have supported companies that wanted to simply start accepting cryptocurrency through a point-of-sale system to companies that wanted to build their company on top of the blockchain.
+                          Very early into my career, I found cryptocurrency and quickly realized it was the path I wished to pursue. Since then I have come to master several different blockchain technologies and have found creative ways to apply them to businesses of all sizes. I have supported companies that wanted to simply start accepting cryptocurrency through a point-of-sale system to companies that wanted to build their company on top of the blockchain.
                         </p>
                         <p>
-                          If you are looking to work with <strong>Boone Development</strong> on your own blockchain implementation, or any other form of custom development, do not hesitate to reach out today. I pride myself on delivering high quality products with a blazing fast speed and efficiency that can fully satisfy your companies particular needs before the competition.
+                          If you are looking to work with <strong>Boone Development</strong> please do not hesitate to reach out today. I pride myself on quickly and effectively delivering high quality services with attention to detail that will fully satisfy your particular needs. You can find more information about what services <strong>Boone Development</strong> offers on the Services section.
                         </p>
                       </div>
                       <!-- <div class="download-resume">
                         <a href="//mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
                       </div> -->
-                    </div>
-
-                    <div class="col-sm-12 col-md-4">
-                      <ul class="info-list">
-                        <li><span class="title">Freelance</span><br/>
-                        <span class="value available">Available</span></li>
-                        <li><span class="title">Email</span><span class="value">
-                        <a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></span></li>
-                      </ul>
                     </div>
 
                   </div>
@@ -546,9 +543,9 @@
     <script type="text/javascript" src="js/jquery.shuffle.min.js"></script>
     <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script> -->
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
-    <script type="text/javascript" src="js/jquery.googlemap.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery.googlemap.js"></script> -->
     <script type="text/javascript" src="js/main.js"></script>
 
     <script>
