avoid adblocker issue with images

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <meta property="og:title" content="Boone Development" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://achaney.me" />
-    <meta property="og:image" content="https://achaney.me/images/BooneDevLogo-blue.png" />
+    <meta property="og:url" content="//achaney.me" />
+    <meta property="og:image" content="//achaney.me/images/BooneDevLogo-blue.png" />
 
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
 
-    <!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
+    <!-- <script src='//www.google.com/recaptcha/api.js'></script> -->
   </head>
 
   <body class="material-template">
@@ -365,7 +365,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="https://mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
+                          <a href="//mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
                         </div>
                       </div>
                     </div>
@@ -424,7 +424,7 @@
                         <div class="service-block"> 
                           <div class="service-info">
                             <div class="service-image">
-                              <img src="images/service/advertising_icon.png" alt="Advertising Campaigns" class="mCS_img_loaded">
+                              <img src="images/service/campaigns_icon.png" alt="Advertising Campaigns" class="mCS_img_loaded">
                             </div>
                             <h4>Advertising Campaigns</h4>
                             <p><strong>Boone Development</strong> can help you create new advertising campaigns or manage existing ones on platforms such as Facebook (Meta), Google Adwords, Hive Blockchain, and more.</p>
