Add google analytics property

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WVT3G8VSRP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WVT3G8VSRP');
+    </script>
+
     <!-- <script src='//www.google.com/recaptcha/api.js'></script> -->
   </head>
 
