update opengraph tags

--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
     <link rel="stylesheet" href="css/animate.css" type="text/css">
     <link rel="stylesheet" href="css/transition-animations.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.css" type="text/css">
-    <!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css"> -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css"> -->
 
-    <meta property="og:title" content="Boone Development" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="//achaney.me" />
-    <meta property="og:image" content="//achaney.me/images/BooneDevLogo-blue.png" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://boonedevelopment.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Boone Development">
+    <meta property="og:description" content="Boone Development">
+    <meta property="og:image" content="https://boonedevelopment.com/images/BooneDevLogo-blue.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="boonedevelopment.com">
+    <meta property="twitter:url" content="https://boonedevelopment.com">
+    <meta name="twitter:title" content="Boone Development">
+    <meta name="twitter:description" content="Boone Development">
+    <meta name="twitter:image" content="https://boonedevelopment.com/images/BooneDevLogo-blue.png">
 
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
@@ -498,7 +508,25 @@
                 <div class="page-content">
 
                   <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-6">
+                      <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
+
+                      <div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget' style='display: inline-block;'>
+                           <a itemprop='url' href=https://www.fiverr.com/higrow rel="nofollow" target="_blank" style='display: inline-block;'>
+                              <div class='fiverr-seller-content' id='fiverr-seller-widget-content-637dd0df-09f6-449a-b576-10a81e882044' itemprop='contentURL' style='display: none;'></div>
+                              <div id='fiverr-widget-seller-data' style='display: none;'>
+                                  <div itemprop='name' >higrow</div>
+                                  <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
+                                  <div itemprop='jobtitle'>Seller</div>
+                                  <div itemprop='description'>Having been on computers since the dawn of the 2000s. technology comes to me as naturally as music to a gifted musician. Since then, I have grown from a young curious mind into a very well rounded programmer with the skills and experience to work with any framework necessary to get the job done. Programming is my passion and I apply it to every single aspect of my life in on way or another.</div>
+                              </div>
+                          </a>
+                      </div>
+
+                      <script id='fiverr-seller-widget-script-637dd0df-09f6-449a-b576-10a81e882044' src='https://widgets.fiverr.com/api/v1/seller/higrow?widget_id=637dd0df-09f6-449a-b576-10a81e882044' data-config='{"category_name":"Programming \u0026 Tech"}' async='true' defer='true'></script>
+
+                    </div>
+                    <div class="col-sm-6">
                       <div class="col-centered" style="width:100%;max-width:420px">
                         <div class="block-title text-center">
                           <h3>Get in <span>Touch</span></h3>
