--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta property="og:title" content="Boone Development">
     <meta property="og:description" content="Boone Development">
     <meta property="og:image" content="https://boonedevelopment.com/images/BooneDevLogo-blue.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
