Removed contact link: READD

--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
               <li>
                 <a class="pt-trigger" href="#services" data-animation="62">Services</a>
               </li>
-              <li>
-                <a class="pt-trigger" href="#contact" data-animation="62">Contact</a>
-              </li>
+              <!-- REMOVED
+                <li>
+                  <a class="pt-trigger" href="#contact" data-animation="62">Contact</a>
+                </li>
+              REMOVED -->
             </ul>
             <!-- /Main menu -->
           </div>
