Updated Boone Development resume description blurb

--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
                             <span class="item-small">Boone Development</span>
                             <br/>
                             <p class="item-description">
-                              <strong>Boone Development</strong> is a boutique development firm that specializes in cutting edge blockchain technology. Some of the blockchain platforms that <strong>Boone Development</strong> currently supports are Bitcoin, EOS, Hive, Steem, and Ethereum.<br/><br/>
-                              On top of software development services, <strong>Boone Development</strong> also provides high quality blockchain consulting for all types of businesses and clients.
+                              <strong>Boone Development</strong> is a boutique development firm that specializes in utilizing cutting edge open-source technologies such as Ruby on Rails and OCLIF. By remaining apprised with the ever changing landscape of open source code, <strong>Boone Development</strong> is able to create highly scalable applications through the proof-of-concept stage to production grade deployments in lightning speed that exceed all client level requirements.
                             </p>
                           </div>
                           <!-- / Experience 1 -->
